--- a/eccemotus_ui/templates/dirty_index.html
+++ b/eccemotus_ui/templates/dirty_index.html
@@ -2,9 +2,9 @@
 <head>
 <meta charset="utf-8">
 
-<script type="text/javascript" language="javascript" src="static/d3/d3.min.js"></script>
+<script type="text/javascript" language="javascript" src="static/d3.min.js"></script>
 <script type="text/javascript" language="javascript" src="static/lateral-map.js"></script>
-<script type="text/javascript" language="javascript" src="../graph.js"></script>
+<script type="text/javascript" language="javascript" src="graph.js"></script>
 
 </head>
 
